2007-11-19  Alp Toker  <alp@atoker.com>

        Reviewed by Mark Rowe.

        http://bugs.webkit.org/show_bug.cgi?id=16040
        [GTK] GtkLauncher should be written in C

        Port GtkLauncher to plain C.

        Use a more conventional GTK+ coding style.

        Use a toolbar instead of menus.

        Various signature fixes and cleanups.

        Add a license header. Assume all previous modifications were copyright
        assigned to Apple Inc. by default.

        * GtkLauncher/GtkLauncher.pro:
        * GtkLauncher/main.c: Added.
        (activate_url_entry_cb):
        (update_title):
        (link_hover_cb):
        (title_change_cb):
        (progress_change_cb):
        (destroy_cb):
        (go_back_cb):
        (go_forward_cb):
        (create_browser):
        (create_statusbar):
        (create_toolbar):
        (create_window):
        (main):
        * GtkLauncher/main.cpp: Removed.

2007-11-19  Kevin Ollivier  <kevino@theolliviers.com>

        Build script fixes to ensure they do the right thing for the 
        wx port, and update build-wxwebkit to reflect the way the
        build scripts now work.

        Reviewed by Adam.

        * Scripts/build-testkjs:
        * Scripts/build-webkit:
        * Scripts/run-javascriptcore-tests:
        * Scripts/webkitdirs.pm:
        * wx/build-wxwebkit:

2007-11-18  Eric Seidel  <eric@webkit.org>

        Reviewed by Anders.

        Make run-javascriptcore-tests report failures on exit (to support git bisect)

        * Scripts/run-javascriptcore-tests:

2007-11-18  Alexey Proskuryakov  <ap@webkit.org>

        Reviewed by Adam Roben.

        Make run-webkit-tests work with Windows debug build.

        * DumpRenderTree/win/DumpRenderTree.cpp: (main): Only use memory checks with debug CRT.
        * DumpRenderTree/win/DumpRenderTree.vcproj: Switched Debug configuration to release CRT,
        as it is supposed to run with release Apple libraries. Removed _DEBUG preprocessor