@@ -185,13 +185,13 @@ for my $dir (@projects) {
             next;
         }
 
-        $result = buildQMakeGtkProject($dir);
+        $result = buildQMakeGtkProject($dir, $clean);
     } elsif (isQt()) {
         if ($dir ne "WebKit") {
             chdir ".." or die;
             next;
         }
-        $result = buildQMakeQtProject($dir);
+        $result = buildQMakeQtProject($dir, $clean);
     } elsif (isOSX()) {
         $result = system "xcodebuild", "-project", "$dir.xcodeproj", @options, $overrideFeatureDefinesString, @coverageSupportOption, @ARGV;
     } elsif (isCygwin()) {
